--- a/doc/docker/system-cloud-account/Dockerfile
+++ b/doc/docker/system-cloud-account/Dockerfile
@@ -3,4 +3,4 @@ ENV JAR_VERSION=""
 ADD system-cloud-account-*.jar /
 ENV NACOS_ADDR=""
 
-ENTRYPOINT ["sh","-c","java -jar -Dspring.cloud.nacos.config.server-addr=${NACOS_ADDR} -Dspring.cloud.nacos.discovery.server-addr=${NACOS_ADDR} novel-gateway-${JAR_VERSION}.jar"]
+ENTRYPOINT ["sh","-c","java -jar -Dspring.cloud.nacos.config.server-addr=${NACOS_ADDR} -Dspring.cloud.nacos.discovery.server-addr=${NACOS_ADDR} system-cloud-account-${JAR_VERSION}.jar"]
