--- a/doc/docker/docker-compose.yml
+++ b/doc/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: "always"
     environment:
       - JAR_VERSION=${NOVEL_CLOUD_VERSION}
-      - NACOS_ADDR=base-nacos-server:8848
+      - NACOS_ADDR=${NACOS_ADDRESS}:8848
     ports:
       - "8010:8010"
     networks:
@@ -30,7 +30,7 @@ services:
     restart: "always"
     environment:
       - JAR_VERSION=${NOVEL_CLOUD_VERSION}
-      - NACOS_ADDR=base-nacos-server:8848
+      - NACOS_ADDR=${NACOS_ADDRESS}:8848
     ports:
       - "8001:8001"
     networks:
@@ -52,7 +52,7 @@ services:
     restart: "always"
     environment:
       - JAR_VERSION=${NOVEL_CLOUD_VERSION}
-      - NACOS_ADDR=base-nacos-server:8848
+      - NACOS_ADDR=${NACOS_ADDRESS}:8848
     ports:
       - "9030:9030"
     networks:
@@ -74,7 +74,7 @@ services:
     restart: "always"
     environment:
       - JAR_VERSION=${NOVEL_CLOUD_VERSION}
-      - NACOS_ADDR=base-nacos-server:8848
+      - NACOS_ADDR=${NACOS_ADDRESS}:8848
     ports:
       - "8003:8003"
     networks:
