--- a/system-cloud-gateway/src/main/resources/application.yml
+++ b/system-cloud-gateway/src/main/resources/application.yml
@@ -64,7 +64,29 @@ spring:
                 redis-rate-limiter.replenishRate: 3
                 redis-rate-limiter.burstCapacity: 5
                 key-resolver: "#{@ipKeyResolver}"
-
+  #---- redis配置  ----#
+  redis:
+    database: 0
+    host: ${redis.host}
+    port: ${redis.port}
+    password: ${redis.password}
+    jedis:
+      pool:
+        #最大连接数据库连接数,设 0 为没有限制
+        max-active: 30
+        #最大等待连接中的数量,设 0 为没有限制
+        max-idle: 10
+        #最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
+        max-wait: -1ms
+        #最小等待连接中的数量,设 0 为没有限制
+        min-idle: 0
+      lettuce:
+        pool:
+          max-active: 10
+          max-idle: 5
+          max-wait: -1ms
+          min-idle: 0
+        shutdown-timeout: 100ms
 #eureka:
 #  instance:
 #    # 注册服务的IP，而不是逻辑名称
